# StudHelper

./: .gitignore  CLASS_MANAGEMENT_COMPLETE_CODE.txt  CLASS_MANAGEMENT_IMPLEMENTATION_GUIDE.md  README.md  README_1_FIREBASE.md  README_2_USER_MODEL_REFACTOR.md  README_3_PASSWORD_LEVELING.md  README_CLASS_MANAGEMENT.md
Backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  seed_data.py
Backend/.github/workflows/: ci.yml  deploy.yml
Backend/app/: __init__.py  config.py  database.py  firebase_admin.py  logging_config.py  main.py
Backend/app/migrations/: __init__.py  env.py  script.py.mako
Backend/app/models/: __init__.py
Backend/app/routes/: auth.py  (+5 more)
Backend/chroma_data_dev/: chroma.sqlite3
Backend/client_examples/: javascript_client.js  python_client.py
Backend/docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  nginx.conf
Backend/docs/: DEVELOPMENT.md  PRODUCTION.md
Backend/migrations/: env.py
Backend/monitoring/: healthcheck.py  metrics.py
Backend/requirements/: base.txt  dev.txt  prod.txt
Backend/scripts/: deploy.py  dev-setup.sh  docker-dev.sh  migrate_db.py  production-deploy.sh  run-tests.sh  setup_dev.py  test_setup.py
Backend/src/: __init__.py  config.py  main.py
Backend/tests/: __init__.py  conftest.py  test_auth.py  test_chat.py  test_classes.py  test_documents.py  test_integration.py  test_permissions.py  test_services.py  test_usage.py
Backend/uploads/: 734e398d-c4ca-469c-a75e-153a613f5725.txt
(+178 files in other folders)
